# estwhi

./: CHEAT_CARDS_HLD.md  CHEAT_CARDS_HLD_ISSUES.md  CHEAT_CARDS_HLD_ISSUES_V2.md  Cargo.toml  ESTWHI.EXE.lnk  ESTWHI.RES  ESTWHI.~RE  GEMINI.md  OPTIONS_DIALOG_IMPLEMENTATION_SUMMARY.md  RANDOM_THINGS_DESIGN.md  README.md  RESOURCE.BAT  SCORES_DIALOG_COMPARISON.md  estwhi.pas  estwhi_v11.pas
.claude/: settings.local.json
Designs/: 2025.09.27 - Classic UI parity plan.md  2025.09.27 - Estwhi investigation.md  2025.09.27 - Modernization plan.md  2025.09.28 - Classic rendering parity plan.md  2025.09.28 - HLD - Estimation Whist (Turbo Pascal original).md
HELP/: ESTWHI.ERR  ESTWHI.GID  ESTWHI.HPJ  ESTWHI.RTF  MAINWIN.SHG  OPTNWIN.SHG  RNDMWIN.SHG  estwhi.PH
docs/: 2025.09.27 - Modernization - workspace notes.md  2025.09.29 - Parity implementation plan.md  2025.09.29 - Remaining parity tasks.md  CHEAT_CARDS_HLD_FINAL_CONFIRMATION.md  CHEAT_CARDS_HLD_FINAL_REVIEW.md  CHEAT_CARDS_HLD_REVIEW.md  OPTIONS_DIALOG_HLD.md  OPTIONS_DIALOG_HLD_REVIEW.md
estwhi/: Cargo.toml  build.rs
estwhi-core/: Cargo.toml
estwhi/resources/: app.rc  cards.rcinc
estwhi/src/: game_config.rs  game_controller.rs  game_state.rs  main.rs  registry.rs  rendering.rs  ui_logic.rs
tmp/: callwin_layout_original.txt
wrk_docs/: 2025.11.07 - CR - Comprehensive Code Review.md  2026.01.02 - CC - Final Coverage Report.md  2026.01.02 - CC - Initial Coverage Analysis.md  2026.01.02 - Plan - Coverage Improvement.md  2026.01.09 - CC - Final Coverage Report.md  2026.01.09 - CC - Initial Coverage Analysis.md  (+6 more)
(+12 files in other folders)
